--- a/app.json
+++ b/app.json
@@ -37,6 +37,18 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "22403da8-fefd-43ae-aa6d-8539b458a4dd"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/22403da8-fefd-43ae-aa6d-8539b458a4dd"
     }
   }
 }
